fixed the scrollbar css

--- a/assets/serve/style.css
+++ b/assets/serve/style.css
@@ -33,7 +33,7 @@ body {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--color-scrollbar-primary);
+  background: var(--color-scrollbar-hover);
 }
 
 p {
